# cellaut

./: CMakeLists.txt  LICENSE  README.md
cmake/: ConanConfig.cmake
src/: CMakeLists.txt  ConwayGame.cpp  ConwayGame.h  Log.h  Renderer.cpp  Renderer.h  Rules.h  VMesh.cpp  VMesh.h  main.cpp
test/: CMakeLists.txt  cartcoord.cpp
